--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -7,13 +7,12 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
+    "declaration": true,
+    "emitDeclarationOnly": false,
+    "outDir": "dist",
+    "module": "ESNext",
     "target": "ES2020",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "verbatimModuleSyntax": false,
     "strict": true,
-    "skipLibCheck": true,
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
@@ -22,7 +21,6 @@
 
     // Other Outputs
     "sourceMap": true,
-    "declaration": true,
     "declarationMap": true,
 
     // Stricter Typechecking Options
@@ -39,8 +37,11 @@
 
     // Recommended Options
     "jsx": "react-jsx",
+    "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-  }
+    "skipLibCheck": true,
+  },
+  "include": ["src"]
 }
