--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
     "express": "^5.2.1"
   },
   "devDependencies": {
