--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "scripts": {
     "build": "cd backend && npm ci && npm run build",
     "start": "cd backend && npm run start"
+  },
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
   }
 }
