--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "engines": {
-    "node": ">=20"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "keywords": [],
   "author": "",
