--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "onchain-root",
   "private": true,
   "scripts": {
-    "build": "cd backend && npm ci && npm run build",
+    "build": "cd backend && npm run build",
     "start": "cd backend && npm run start"
   },
   "engines": {
